--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -96,7 +96,7 @@ body.dark form {
 
 input, select, textarea {
   width: 100%;
-  padding: 10px;
+  padding: 8px; /* Alterado de 10px para 8px */
   border: 1px solid #ccc;
   border-radius: 4px;
   font-family: inherit;
@@ -515,8 +515,6 @@ body {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   padding: 2rem;
 }
-
-
 
 
 
@@ -1133,4 +1131,18 @@ html.dark .modal-body .col {
   bottom: auto !important;
   top: 100% !important;
   margin-top: -1px;
+}
+
+.form-control-custom-sm {
+  height: calc(1.8125rem + 2px) !important;
+  padding: 0.25rem 0.5rem !important;
+  font-size: 0.875rem !important;
+}
+
+input.form-control-sm,
+select.form-control-sm,
+textarea.form-control-sm {
+  height: calc(1.8125rem + 2px) !important;
+  padding: 0.25rem 0.5rem !important;
+  font-size: 0.875rem !important;
 }
