--- a/producao/templates/producao/gerenciar_tanques.html
+++ b/producao/templates/producao/gerenciar_tanques.html
@@ -120,8 +120,8 @@
 
         <!-- BOTÕES DE AÇÃO -->
         <div class="mt-4 d-flex gap-2">
-            <button class="btn btn-primary" data-action="salvar-tanque">Salvar</button>
-            <button class="btn btn-secondary" id="btn-novo-tanque">Novo</button>
+            <button type="button" class="btn btn-primary" data-action="salvar-tanque">Salvar</button>
+            <button type="button" class="btn btn-secondary" id="btn-novo-tanque">Novo</button>
         </div>
     </form>
 
