--- a/templates/partials/home_content.html
+++ b/templates/partials/home_content.html
@@ -40,7 +40,7 @@
 
         <!-- ℹ️ Mensagem adicional -->
         <p class="text-muted mb-0">
-          Use o menu lateral para começar suas ações. Aqui você poderá gerenciar empresas, usuários e permissões com facilidade.
+          Use o menu para começar suas ações. Aqui você poderá gerenciar empresas, usuários e permissões com facilidade.
         </p>
       </div>
     </div>
