--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -495,7 +495,7 @@ body {
   position: relative;
   z-index: 0;
   background: none; /* Remove conflitos visuais */
-  padding-top: 60px; /* Ajuste conforme a altura do seu navbar */
+  /* padding-top: 60px; */ /* Ajuste conforme a altura do seu navbar */
 }
 
 /* Logo no topo esquerdo */
