--- a/producao/templates/producao/curvas/detalhe_curva.html
+++ b/producao/templates/producao/curvas/detalhe_curva.html
@@ -33,7 +33,7 @@
                               <th>% Arraç. Biomassa</th>
                               <th>% Mortalidade Presumida</th>
                               <th>Ração</th>
-                              <th>GPD</th>
+                              <th>GPD (g)</th>
                               <th>TCA</th>
                           </tr>
                       </thead>
