--- a/producao/templates/producao/curvas/gerenciar_curvas.html
+++ b/producao/templates/producao/curvas/gerenciar_curvas.html
@@ -240,12 +240,12 @@
               <thead>
                 <tr>
                   <th style="min-width:110px">Período</th>
-                  <th style="min-width:110px">Peso Inicial</th>
-                  <th style="min-width:110px">Peso Final</th>
-                  <th style="min-width:120px">Ganho de Peso</th>
+                  <th style="min-width:110px">Peso Inicial (g)</th>
+                  <th style="min-width:110px">Peso Final (g)</th>
+                  <th style="min-width:120px">Ganho de Peso (g)</th>
                   <th style="min-width:140px">Ração</th>
                   <th style="min-width:100px">Nº Tratos</th>
-                  <th style="min-width:90px">GPD</th>
+                  <th style="min-width:90px">GPD (g)</th>
                   <th style="min-width:90px">TCA</th>
                 </tr>
               </thead>
