--- a/producao/templates/producao/eventos/gerenciar_eventos.html
+++ b/producao/templates/producao/eventos/gerenciar_eventos.html
@@ -149,7 +149,7 @@
                                         <th scope="col">Peso Médio (g)</th>
                                         <th scope="col">Biomassa (g)</th>
                                         <th scope="col" style="width: 150px;">Qtd. Mortalidade</th>
-                                        <th scope="col">Biomassa Retirada (Kg)</th>
+                                        <th scope="col">Biomassa Retirada (g)</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -157,13 +157,13 @@
                                 </tbody>
                                 <tfoot>
                                     <tr>
-                                        <td colspan="6">Total Quantidade</td>
+                                        <td colspan="6">Total Quantidade (peixes)</td>
                                         <td id="total-mortalidade-qtd" class="text-end">0</td>
                                         <td></td>
                                     </tr>
                                     <tr>
                                         <td colspan="6">Total Biomassa (kg)</td>
-                                        <td id="total-mortalidade-biomassa" class="text-end">0.00</td>
+                                        <td id="total-mortalidade-biomassa" class="text-end">0.000</td>
                                         <td></td>
                                     </tr>
                                 </tfoot>
