--- a/producao/templates/producao/povoamento_lotes.html
+++ b/producao/templates/producao/povoamento_lotes.html
@@ -101,7 +101,7 @@
       <div class="table-responsive">
         <table class="table table-sm">
           <thead>
-            <tr><th>ID</th><th>Data</th><th>Lote</th><th>Tanque</th><th>Qtd.</th><th>Peso Médio</th><th>Status</th></tr>
+            <tr><th>ID</th><th>Data</th><th>Lote</th><th>Tanque</th><th>Qtd. (peixes)</th><th>Peso Médio (g)</th><th>Status</th></tr>
           </thead>
           <tbody data-container="historico-body"></tbody>
         </table>
